# CHEM281-Assessment

./: CMakeLists.txt  Dockerfile  MPI_Snippet.cpp  OpenMP_Snippet.cpp
